--- a/lectures/L08/index.qmd
+++ b/lectures/L08/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "CHE 318 Lecture 08"
-subtitle: "Introduction to Unsteady State Mass Transfer"
+subtitle: "Steady State Mass Transfer: More Examples"
 author: "Dr. Tian Tian"
 date: "2026-01-21"
 format:
@@ -127,258 +127,258 @@ Compare the solutions with Example 4. We can also measure the
 diffusivity of volatile organic molecules using the sphere evaporation
 method!
 
-# Introduction to Unsteady State Mass Transfer
+<!-- # Introduction to Unsteady State Mass Transfer -->
 
-## What Is Unsteady-State Mass Transfer?
+<!-- ## What Is Unsteady-State Mass Transfer? -->
 
-![](./public/1D-mt.png){width="65%" .center}
+<!-- ![](./public/1D-mt.png){width="65%" .center} -->
 
-```{=tex}
-\text{[In]} - \text{[Out]} + \text{[Gen]} = \text{[Acc]}
-```
+<!-- ```{=tex} -->
+<!-- \text{[In]} - \text{[Out]} + \text{[Gen]} = \text{[Acc]} -->
+<!-- ``` -->
 
-- Concentration varies with time $\partial c/\partial t \neq 0$
-- Accumulation term is non-zero $\text{[Acc]} \neq 0$
-- Requires time-dependent mass balances
-- Common in transient diffusion, start-up, and response problems
-- **More general** than S.S.
+<!-- - Concentration varies with time $\partial c/\partial t \neq 0$ -->
+<!-- - Accumulation term is non-zero $\text{[Acc]} \neq 0$ -->
+<!-- - Requires time-dependent mass balances -->
+<!-- - Common in transient diffusion, start-up, and response problems -->
+<!-- - **More general** than S.S. -->
 
-## Governing Equation for U.S.S M.T.
+<!-- ## Governing Equation for U.S.S M.T. -->
 
-Consider a control volume in 1D transport, the mass balance equation becomes
+<!-- Consider a control volume in 1D transport, the mass balance equation becomes -->
 
-```{=tex}
-\begin{align*}
- \text{[Acc]} &= \text{[In]} - \text{[Out]} + \text{[Gen]} \\
-S \Delta z \frac{\partial c_A}{\partial t}
-&= S (N_A \vert_{z=z} - N_A \vert_{z=z+\Delta z}) + \text{[Gen]} S \Delta z \\
-\frac{\partial c_A}{\partial t}
-&=
--\frac{\partial N_A(z)}{\partial z}\vert_z + r_{A}
-\end{align*}
-```
+<!-- ```{=tex} -->
+<!-- \begin{align*} -->
+<!--  \text{[Acc]} &= \text{[In]} - \text{[Out]} + \text{[Gen]} \\ -->
+<!-- S \Delta z \frac{\partial c_A}{\partial t} -->
+<!-- &= S (N_A \vert_{z=z} - N_A \vert_{z=z+\Delta z}) + \text{[Gen]} S \Delta z \\ -->
+<!-- \frac{\partial c_A}{\partial t} -->
+<!-- &= -->
+<!-- -\frac{\partial N_A(z)}{\partial z}\vert_z + r_{A} -->
+<!-- \end{align*} -->
+<!-- ``` -->
 
-where $r_{A}$ is the generation rate for A (e.g. local reaction). 
-This is the governing equation for all time-dependent mass transfer!
+<!-- where $r_{A}$ is the generation rate for A (e.g. local reaction).  -->
+<!-- This is the governing equation for all time-dependent mass transfer! -->
 
-## Comparison between Flux equation and Mass Balance
+<!-- ## Comparison between Flux equation and Mass Balance -->
 
-:::{.columns}
-:::{.column width="50%"}
+<!-- :::{.columns} -->
+<!-- :::{.column width="50%"} -->
 
-#### Flux equation
+<!-- #### Flux equation -->
 
-```{=tex}
-\begin{align*}
-N_A = J_{Az}^* + x_A(N_A + N_B)
-\end{align*}
-```
+<!-- ```{=tex} -->
+<!-- \begin{align*} -->
+<!-- N_A = J_{Az}^* + x_A(N_A + N_B) -->
+<!-- \end{align*} -->
+<!-- ``` -->
 
-- Amount of material moved **in** and **out** of controled volume
-- $J_{Az}^*$: Fick's first law of diffusion
-- Can be used for S.S ($d N_A/dz = 0$) and U.S.S
-:::
+<!-- - Amount of material moved **in** and **out** of controled volume -->
+<!-- - $J_{Az}^*$: Fick's first law of diffusion -->
+<!-- - Can be used for S.S ($d N_A/dz = 0$) and U.S.S -->
+<!-- ::: -->
 
-:::{.column width="50%"}
+<!-- :::{.column width="50%"} -->
 
-#### Mass balance eq
+<!-- #### Mass balance eq -->
 
-```{=tex}
-\begin{align}
-\frac{\partial c_A}{\partial t} = - \frac{\partial N_A}{\partial x} + r_A
-\end{align}
-```
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- \frac{\partial c_A}{\partial t} = - \frac{\partial N_A}{\partial x} + r_A -->
+<!-- \end{align} -->
+<!-- ``` -->
 
-- Change of local $c_A$ over time
-- Need flux equation solution first
-- Can be used for S.S ($\frac{\partial c_A}{\partial t} = 0$) and U.S.S.
-:::
+<!-- - Change of local $c_A$ over time -->
+<!-- - Need flux equation solution first -->
+<!-- - Can be used for S.S ($\frac{\partial c_A}{\partial t} = 0$) and U.S.S. -->
+<!-- ::: -->
 
-:::
+<!-- ::: -->
 
-## Mass Balance: Extension to 3D
+<!-- ## Mass Balance: Extension to 3D -->
 
-![Illustration of divergence](./public/divergence-operator.png){width="75%" .center}
+<!-- ![Illustration of divergence](./public/divergence-operator.png){width="75%" .center} -->
 
-```{=tex}
-\begin{align}
-\frac{\partial c_A}{\partial t}
-&= r_A
-- \frac{\partial N_{Ax}}{\partial x}
-- \frac{\partial N_{Ay}}{\partial y}
-- \frac{\partial N_{Az}}{\partial z} \\
-&= r_A - \nabla \cdot \vec{N}_A
-\end{align}
-```
-
-
-- $\nabla \cdot$ is the **divergence** operator (not $\Delta$, not gradient!)
-- $\vec{N}_A$ is generally a 3D vector field
-
----
-
-## Dissecting the General Equation for Mass Balance
-
-```{=tex}
-\begin{align*}
-r_A - \frac{\partial c_A}{\partial t}
-&= \nabla \cdot \left[\vec{J}_{A}^{*} + x_A(\vec{N}_A + \vec{N}_B) \right] \\
-&= \nabla \cdot \left[\vec{J}_{A}^{*} + c_A \vec{v}_m \right] \\
-&= \nabla \cdot \left[ -D_{AB} \nabla c_A + c_A \vec{v}_m \right]
-\end{align*}
-```
-
-- We have fluid velocity $\vec{v}_m$ on the R.H.S
-- Do we know $N_A$ and $N_B$ relation?
-- In general this is hard to solve (coupling fluid with mass transfer)
-- 
-- Often interested in several limiting cases
-
-## Special Cases of Unsteady-State Mass Transfer
-
-- Case 1: Constant $D_{AB}$
-```{=tex}
-\begin{align*}
-frac{\partial c_A}{\partial t}
-&=
-D_{AB}\nabla^2 c_A
-- c_A \nabla \cdot \vec{v}_m
-- \vec{v}_m \cdot \nabla c_A
-+ r_A
-\end{align*}
-```
-
-- Case 2: EMCD for gases at constant $p_T$, $r_A = 0$
-```{=tex}
-\begin{align}
-\frac{\partial c_A}{\partial t}
-&=
-D_{AB}\nabla^2 c_A
-\qquad \text{(Fick’s second law)}
-\end{align}
-```
-
-- Case 3: Constant $\rho$ and $D_{AB}$ (e.g. imcompressible liquids)
-```{=tex}
-\begin{align}
-\frac{\partial c_A}{\partial t}
-&=
-D_{AB}\nabla^2 c_A
-- \vec{v}_m \cdot \nabla c_A
-+ r_A
-\end{align}
-```
-where $\nabla \cdot \vec{v}_m = 0$
-
-## What exactly do we solve?
-
-For U.S.S M.T, we typically need
-
-1. Governing equation (PDE) from any limiting case
-2. Initial conditions $c_A(z, t=0)$
-3. Boundary conditions (B.C.)
-   - Dirichlet B.C. (e.g. $c_A(z=0) = c_0$)
-   - Neumann B.D. (e.g. $N_A(z=0) = N_{A0}$, constant flux)
-4. Solving analytically or numerically
-5. Get $c_A(z, t)$, $x_A(z, t)$, $N_A(x, t)$
-6. Steady-state solutions often means $c_A(z, t\to \infty)$
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- \frac{\partial c_A}{\partial t} -->
+<!-- &= r_A -->
+<!-- - \frac{\partial N_{Ax}}{\partial x} -->
+<!-- - \frac{\partial N_{Ay}}{\partial y} -->
+<!-- - \frac{\partial N_{Az}}{\partial z} \\ -->
+<!-- &= r_A - \nabla \cdot \vec{N}_A -->
+<!-- \end{align} -->
+<!-- ``` -->
 
 
-## B.C. Case A. Concentration at surfaces
+<!-- - $\nabla \cdot$ is the **divergence** operator (not $\Delta$, not gradient!) -->
+<!-- - $\vec{N}_A$ is generally a 3D vector field -->
 
-![Concentration at phase interfaces](./public/bc-conc.svg){width="75%"}
+<!-- --- -->
 
-- Interface can be gas|liquid, liquid|solid, gas|solid
-- Often assuming equilibrium
+<!-- ## Dissecting the General Equation for Mass Balance -->
 
-$$
-c_{A}\vert_{\text{surf}} = c_{As}\qquad\text{eq. solubility}
-$$
+<!-- ```{=tex} -->
+<!-- \begin{align*} -->
+<!-- r_A - \frac{\partial c_A}{\partial t} -->
+<!-- &= \nabla \cdot \left[\vec{J}_{A}^{*} + x_A(\vec{N}_A + \vec{N}_B) \right] \\ -->
+<!-- &= \nabla \cdot \left[\vec{J}_{A}^{*} + c_A \vec{v}_m \right] \\ -->
+<!-- &= \nabla \cdot \left[ -D_{AB} \nabla c_A + c_A \vec{v}_m \right] -->
+<!-- \end{align*} -->
+<!-- ``` -->
 
-## B.C. Case 2: Chemical Reactions
+<!-- - We have fluid velocity $\vec{v}_m$ on the R.H.S -->
+<!-- - Do we know $N_A$ and $N_B$ relation? -->
+<!-- - In general this is hard to solve (coupling fluid with mass transfer) -->
+<!-- -  -->
+<!-- - Often interested in several limiting cases -->
 
-![Boundary condition for reaction](./public/bc-reaction.svg){width="75%"}
+<!-- ## Special Cases of Unsteady-State Mass Transfer -->
+
+<!-- - Case 1: Constant $D_{AB}$ -->
+<!-- ```{=tex} -->
+<!-- \begin{align*} -->
+<!-- frac{\partial c_A}{\partial t} -->
+<!-- &= -->
+<!-- D_{AB}\nabla^2 c_A -->
+<!-- - c_A \nabla \cdot \vec{v}_m -->
+<!-- - \vec{v}_m \cdot \nabla c_A -->
+<!-- + r_A -->
+<!-- \end{align*} -->
+<!-- ``` -->
+
+<!-- - Case 2: EMCD for gases at constant $p_T$, $r_A = 0$ -->
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- \frac{\partial c_A}{\partial t} -->
+<!-- &= -->
+<!-- D_{AB}\nabla^2 c_A -->
+<!-- \qquad \text{(Fick’s second law)} -->
+<!-- \end{align} -->
+<!-- ``` -->
+
+<!-- - Case 3: Constant $\rho$ and $D_{AB}$ (e.g. imcompressible liquids) -->
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- \frac{\partial c_A}{\partial t} -->
+<!-- &= -->
+<!-- D_{AB}\nabla^2 c_A -->
+<!-- - \vec{v}_m \cdot \nabla c_A -->
+<!-- + r_A -->
+<!-- \end{align} -->
+<!-- ``` -->
+<!-- where $\nabla \cdot \vec{v}_m = 0$ -->
+
+<!-- ## What exactly do we solve? -->
+
+<!-- For U.S.S M.T, we typically need -->
+
+<!-- 1. Governing equation (PDE) from any limiting case -->
+<!-- 2. Initial conditions $c_A(z, t=0)$ -->
+<!-- 3. Boundary conditions (B.C.) -->
+<!--    - Dirichlet B.C. (e.g. $c_A(z=0) = c_0$) -->
+<!--    - Neumann B.D. (e.g. $N_A(z=0) = N_{A0}$, constant flux) -->
+<!-- 4. Solving analytically or numerically -->
+<!-- 5. Get $c_A(z, t)$, $x_A(z, t)$, $N_A(x, t)$ -->
+<!-- 6. Steady-state solutions often means $c_A(z, t\to \infty)$ -->
 
 
-```{=tex}
-\begin{align}
-N_A\big|_{\text{surf}} = \nu_A\, r_A
-\end{align}
-```
+<!-- ## B.C. Case A. Concentration at surfaces -->
 
-- Surface reaction couples mass transfer and kinetics
-- Molar flux at surface determined by reaction rate
-- Generally Neumann boundary
-- $\nu_A$: stoichiometric ratio
+<!-- ![Concentration at phase interfaces](./public/bc-conc.svg){width="75%"} -->
 
-## U.S.S Example: Diffusion Through Stagnant B
+<!-- - Interface can be gas|liquid, liquid|solid, gas|solid -->
+<!-- - Often assuming equilibrium -->
 
-We have seen in previous examples how to solve the molar flux of
-liquid evaporating into stagnant air. Let's see the same system but in unsteady state.
+<!-- $$ -->
+<!-- c_{A}\vert_{\text{surf}} = c_{As}\qquad\text{eq. solubility} -->
+<!-- $$ -->
 
-**Question**: liquid methanol (A) evaporates inside stagnant air (B)
-inside a vertical tube at constant temperature $T$ and pressure
-$p_T$. At the vent of the system dry air is continuous blown. Plot the
-molar fraction $x_A$ as a function of $z$ and time $t$. Assume the liquid level is $z_0$ away from the vent and does not change during the evaporation process.
+<!-- ## B.C. Case 2: Chemical Reactions -->
 
-## Step 1: Species Mass Balance (Unsteady, 1D)
+<!-- ![Boundary condition for reaction](./public/bc-reaction.svg){width="75%"} -->
 
-For a differential slice $A\,dz$, write the mass balance
 
-```{=tex}
-\begin{align}
-\text{[IN]} - \text{[OUT]} &= \text{[ACC]} \\
-A N_A|vert_{z=z} - A N_A|vert_{z=z+\Delta z}
-&= \frac{\partial}{\partial t}\left(A\,dz\,c_A\right)
--\frac{\partial N_A}{\partial z} = \frac{\partial c_A}{\partial t}
-\end{align}
-```
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- N_A\big|_{\text{surf}} = \nu_A\, r_A -->
+<!-- \end{align} -->
+<!-- ``` -->
 
-We would have $\frac{\partial c_B}{\partial t} = -\frac{\partial N_B}{\partial z}$
+<!-- - Surface reaction couples mass transfer and kinetics -->
+<!-- - Molar flux at surface determined by reaction rate -->
+<!-- - Generally Neumann boundary -->
+<!-- - $\nu_A$: stoichiometric ratio -->
 
-## Step 2: Couple With Flux Equation
+<!-- ## U.S.S Example: Diffusion Through Stagnant B -->
 
-This is a diffusion through stagnant B case, we can directly write
+<!-- We have seen in previous examples how to solve the molar flux of -->
+<!-- liquid evaporating into stagnant air. Let's see the same system but in unsteady state. -->
 
-```{=tex}
-\begin{align}
-N_A(z, t) = -c_T D_{AB}\frac{\partial x_A(z, t)}{\partial z} + x_A \left[N_A(z, t) + N_B(z, t)\right]
-\end{align}
-```
+<!-- **Question**: liquid methanol (A) evaporates inside stagnant air (B) -->
+<!-- inside a vertical tube at constant temperature $T$ and pressure -->
+<!-- $p_T$. At the vent of the system dry air is continuous blown. Plot the -->
+<!-- molar fraction $x_A$ as a function of $z$ and time $t$. Assume the liquid level is $z_0$ away from the vent and does not change during the evaporation process. -->
 
-- Can we use $N_B=0$ in this case?
-- **No**, $N_B$ changes by $z, t$!
-- $N_B=0$ only at $z=0$ (liquid interface)
+<!-- ## Step 1: Species Mass Balance (Unsteady, 1D) -->
 
-## Step 3: Conservation Equations
+<!-- For a differential slice $A\,dz$, write the mass balance -->
 
-Generally, we still need to know the relation between $N_A$ and $N_B$
-to solve the mass-balance-flux equations.
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- \text{[IN]} - \text{[OUT]} &= \text{[ACC]} \\ -->
+<!-- A N_A|vert_{z=z} - A N_A|vert_{z=z+\Delta z} -->
+<!-- &= \frac{\partial}{\partial t}\left(A\,dz\,c_A\right) -->
+<!-- -\frac{\partial N_A}{\partial z} = \frac{\partial c_A}{\partial t} -->
+<!-- \end{align} -->
+<!-- ``` -->
 
-The total concentration $c_T=c_A + c_B$ is conserved, therefore we have constrains
+<!-- We would have $\frac{\partial c_B}{\partial t} = -\frac{\partial N_B}{\partial z}$ -->
 
-```{=tex}
-\begin{align}
-\text{[In]}_{T} - \text{[Out]}_{T} &= 0 \\
-\text{[In]}_A - \text{[Out]}_A &= -\text{[In]}_B + \text{[Out]}_B \\
-\frac{\partial N_A(z, t)}{\partial z} &= -\frac{\partial N_B(z, t)}{\partial z}
-\end{align}
-```
+<!-- ## Step 2: Couple With Flux Equation -->
 
-## Step 4: Boundary Conditions
+<!-- This is a diffusion through stagnant B case, we can directly write -->
 
-Boundary conditions (Left, Right, any time)
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- N_A(z, t) = -c_T D_{AB}\frac{\partial x_A(z, t)}{\partial z} + x_A \left[N_A(z, t) + N_B(z, t)\right] -->
+<!-- \end{align} -->
+<!-- ``` -->
 
-- $x_A(0, t) = x_{A0}$ (equilibrium vapor fraction)
-- $x_A(L, t) = 0$      (dry air)
-- $N_B(0, t) = 0$  (No-flux boundary for B)
+<!-- - Can we use $N_B=0$ in this case? -->
+<!-- - **No**, $N_B$ changes by $z, t$! -->
+<!-- - $N_B=0$ only at $z=0$ (liquid interface) -->
 
-The last B.C for $N_B(0, t)$ gives:
-```{=tex}
-\begin{align}
-N_A(0, t) = -\frac{c_T D_{AB}}{1 - x_{A0}}\frac{\partial x_A(0, t)}{\partial z}
-\end{align}
-```
+<!-- ## Step 3: Conservation Equations -->
+
+<!-- Generally, we still need to know the relation between $N_A$ and $N_B$ -->
+<!-- to solve the mass-balance-flux equations. -->
+
+<!-- The total concentration $c_T=c_A + c_B$ is conserved, therefore we have constrains -->
+
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- \text{[In]}_{T} - \text{[Out]}_{T} &= 0 \\ -->
+<!-- \text{[In]}_A - \text{[Out]}_A &= -\text{[In]}_B + \text{[Out]}_B \\ -->
+<!-- \frac{\partial N_A(z, t)}{\partial z} &= -\frac{\partial N_B(z, t)}{\partial z} -->
+<!-- \end{align} -->
+<!-- ``` -->
+
+<!-- ## Step 4: Boundary Conditions -->
+
+<!-- Boundary conditions (Left, Right, any time) -->
+
+<!-- - $x_A(0, t) = x_{A0}$ (equilibrium vapor fraction) -->
+<!-- - $x_A(L, t) = 0$      (dry air) -->
+<!-- - $N_B(0, t) = 0$  (No-flux boundary for B) -->
+
+<!-- The last B.C for $N_B(0, t)$ gives: -->
+<!-- ```{=tex} -->
+<!-- \begin{align} -->
+<!-- N_A(0, t) = -\frac{c_T D_{AB}}{1 - x_{A0}}\frac{\partial x_A(0, t)}{\partial z} -->
+<!-- \end{align} -->
+<!-- ``` -->
 
 
 
@@ -388,9 +388,8 @@ N_A(0, t) = -\frac{c_T D_{AB}}{1 - x_{A0}}\frac{\partial x_A(0, t)}{\partial z}
 
 
 ## Summary
-
-- Solving diffusion through varying cross-section
 - Pseudo-steady state solutions to diffusion-evaporation problems
+- We will discuss about unsteady state mass transfer next lecture!
 
 
 
