--- a/lectures/L09/index.qmd
+++ b/lectures/L09/index.qmd
@@ -1,325 +1,360 @@
 ---
-title: "CHE 318 Lecture 07"
-subtitle: "Steady State Mass Transfer -- Other Geometries"
+title: "CHE 318 Lecture 09"
+subtitle: "Introduction to Unsteady State Mass Transfer"
 author: "Dr. Tian Tian"
-date: "2026-01-19"
+date: "2026-01-23"
 format:
   html: {}
   revealjs:
     output-file: slides.html
   pdf:
-    output-file: L07.pdf
+    output-file: L09.pdf
 ---
 
 ::: {.content-visible when-format="html" unless-format="revealjs"}
 
 ::: {.callout-note}
 - Slides 👉  [Open presentation🗒️](./slides.html)
-- PDF version of course note  👉 [Open in pdf](./L07.pdf)
-- Handwritten notes 👉 [Open in pdf](./public/L07_annotated.pdf)
+- PDF version of course note  👉 [Open in pdf](./L09.pdf)
+- Handwritten notes 👉 [Open in pdf](./public/L09_annotated.pdf)
 :::
 
 :::
 
-## Recap
+## Recap {.center}
 
-- Examples of steady state diffusion
-- Applying steady state flux equations to solid and liquid systems
-- Examples for several special forms
-  - weight % and average concentration in liquid
-  - log mean form of concentration / molar fraction
-  - pressure - solubility - permeability
+- Solving examples with pseudo steady state assumption
+- Conclusion of steady state mass transfer
 
 
 ## Learning Outcomes {.center}
 
-(Continue from Lecture 06) After today's lecture, you will be able to:
+After today's lecture, you will be able to:
 
-- **Identify** the difference between diffusion in various geometries
-- **Describe** the approximations used for simplifying the soluton for $N_A$
-- **Recall** the reason to choose stagnant B solution for spherical diffusion
-- **Solve** pseudo-steady state diffusion problem
-- **Analyze** solutions of P.S.S solution and calculate diffusivity through experiment
+- **Recall** difference between steady and unsteady state solutions
+- **Derive** mass balance and flux equations in unsteady state problems
+- **Identify** the generation and accumulation terms in typical transport problems
+- **Analyze** time-dependent concentration profiles for U.S.S situations.
 
-## Diffusion Through Varying Cross-Sectional Area
+## What Is Unsteady-State Mass Transfer?
 
-**Steady state mass balance**
-
-Many industrial applications involde 1D transport with variable area $A(z)$, with mass balance:
+![](./public/1D-mt.png){width="65%" .center}
 
 ```{=tex}
-\begin{align}
-[\mathrm{In}] - [\mathrm{Out}] &= 0 \\
-N_{A1} A_1 - N_{A2} A_2 &= 0
-\end{align}
+\text{[In]} - \text{[Out]} + \text{[Gen]} = \text{[Acc]}
 ```
 
-Define the **total molar flow rate** of A:
+- Concentration varies with time $\partial c/\partial t \neq 0$
+- Accumulation term is non-zero $\text{[Acc]} \neq 0$
+- Requires time-dependent mass balances
+- Common in transient diffusion, start-up, and response problems
+- **More general** than S.S.
 
-$$
-\overline{N}_A = N_A \, A(z)
-$$
+## Governing Equation for U.S.S M.T.
 
-At steady state:
-- $\overline{N}_A$ is constant
-- $N_A$ varies with position if $A(z)$ (or $A(r)$) varies
+Consider a control volume in 1D transport, the mass balance equation becomes
 
-## Applications of Variable-Area Diffusion
+```{=tex}
+\begin{align*}
+ \text{[Acc]} &= \text{[In]} - \text{[Out]} + \text{[Gen]} \\
+S \Delta z \frac{\partial c_A}{\partial t}
+&= S (N_A \vert_{z=z} - N_A \vert_{z=z+\Delta z}) + \text{[Gen]} S \Delta z \\
+\frac{\partial c_A}{\partial t}
+&=
+-\frac{\partial N_A(z)}{\partial z}\vert_z + r_{A}
+\end{align*}
+```
 
-![](./public/vary-area.png){width="75%"}
+where $r_{A}$ is the generation rate for A (e.g. local reaction). 
+This is the governing equation for all time-dependent mass transfer!
+
+## Comparison between Flux equation and Mass Balance
 
 :::{.columns}
 :::{.column width="50%"}
-This framework can be used to solve diffusion through:
 
-- Sphere
-- Cylinder
-- Tube with varying diameter
-- Any system with a known area function $A = A(z)$ or $A=A(r)$
-:::
+#### Flux equation
 
+```{=tex}
+\begin{align*}
+N_A = J_{Az}^* + x_A(N_A + N_B)
+\end{align*}
+```
 
-:::{.column width="50%"}
-**Key ideas**
-
-- Do **not** solve as simple 1D Cartesian diffusion
-- Geometry enters through $A(z)$
-- Flux adjusts to maintain constant $\overline{N}_A$
-:::
-:::
-
-## Case Study 1: Diffusion Through a Sphere
-
-:::{.columns}
-:::{.column width="50%"}
-**Typical physical situations**
-
-- Evaporation of a liquid droplet
-- Sublimation of a solid organic sphere
+- Amount of material moved **in** and **out** of controled volume
+- $J_{Az}^*$: Fick's first law of diffusion
+- Can be used for S.S ($d N_A/dz = 0$) and U.S.S
 :::
 
 :::{.column width="50%"}
-**Conditions**
 
-- Steady state
-- Stagnant B ($N_B = 0$)
-- Radial symmetry
-:::
-:::
-
-**Governing equation (stagnant B)**: use the **ODE form**, not the full 1D Cartesian solution:
+#### Mass balance eq
 
 ```{=tex}
 \begin{align}
-N_A &= -\frac{D_{AB}}{RT}\frac{d p_A}{dr}
-      + \frac{p_A}{p_T} N_A \\
-N_A\!\left(1 - \frac{p_A}{p_T}\right)
-    &= -\frac{D_{AB}}{RT}\frac{d p_A}{dr}
+\frac{\partial c_A}{\partial t} = - \frac{\partial N_A}{\partial x} + r_A
 \end{align}
 ```
 
-## Stagnant B in a Sphere: Reformulation
-
-For spherical symmetry, $N_A(r)$ varies with $r$ and **cannot** appear alone in the balance equation L.H.S
-
-Use the **constant molar flow rate**:
-$$
-\overline{N}_A = N_A(r)\,4\pi r^2 = \text{constant}
-$$
-
-```{=tex}
-\begin{align}
-\frac{\overline{N}_A}{4\pi r^2}\,dr
-&= -\frac{D_{AB}}{RT}\frac{1}{1-p_A/p_T}\,dp_A
-\end{align}
-```
-
-## Stagnant B in a Sphere: Final Results
-
-```{=tex}
-\begin{align}
-\boxed{
-\frac{\overline{N}_A}{4\pi} \left(\frac{1}{r_1}-\frac{1}{r_2}\right)
-= \frac{D_{AB}p_T}{RT}
-\ln\!\left(\frac{p_T-p_{A2}}{p_T-p_{A1}}\right)
-}
-\end{align}
-```
-
-This looks very similar to the 1D stagnant B solution in cartesian
-coordinates. We can simplify it in several occations.
-
-## Stagnant B in a Sphere: Far-Field Limit ($r_2 \gg r_1$)
-
-**Special case:** $r_2 \gg r_1$ (often $r_2 \to \infty$)
-
-Typical examples:
-- Evaporating liquid droplet
-- Sublimation of a naphthalene (solid) sphere
-
-From the general spherical stagnant-B result, use the **log-mean pressure** form:
-
-```{=tex}
-\begin{align}
-\boxed{
-N_{A1}
-= \frac{D_{AB} p_T}{RT\,p_{Bm}}
-\left(p_{A1} - p_{A2}\right)
-}
-\end{align}
-```
-
-Where $N_{A1} = N_A(r=r_1)$. For liquid, another form is often used (considering $p_{Bm}/p_T \approx 1$ and use $p = cRT$)
-
-```{=tex}
-\begin{align}
-\boxed{
-N_{A1} = \frac{D_{AB}}{r_1}\left(c_{A1} - c_{A2}\right)
-}
-\end{align}
-```
-
-## Spherical Diffusion: Thin Shell Limit $r_1 \approx r_2$
-
-**Special case:** thin membrane / shell  
-$\Delta r = r_2 - r_1 \ll r_1$
-
-Approximation:
-$$
-\frac{1}{r_1} - \frac{1}{r_2}
-\;\approx\;
-\frac{r_2 - r_1}{r_1^2}
-\;=\;
-\frac{\Delta r}{r_1^2}
-$$
-
-Final result:
-
-```{=tex}
-\begin{align}
-\boxed{
-N_{A1} = \frac{D_{AB}}{RT}\frac{p_T}{p_{Bm}}
-\frac{(p_{A1}-p_{A2})}{\Delta r}
-}
-\end{align}
-```
-
-This acts like a 1D stagnant-B film with thickness $\Delta r$! (See lecture 3 wooclap question.)
-
-## Case 2: Diffusion Through a Non-uniform Area Conduit
-
-Conditions:
-
-- Stagnant B
-- Steady state
-- Variable radius $r(z)$
-
-Assume **linear radius profile**:
-$$
-r(z) = r_1 + \frac{(r_2-r_1)}{(z_2-z_1)}(z-z_1)
-$$
-
-Use the **ODE form** with $\dot N_A = N_A(z)\,A(z)$ and $A(z)=\pi r(z)^2$:
-
-```{=tex}
-\begin{align}
-\frac{\dot N_A}{\pi}\int_{z_1}^{z_2}\frac{dz}{\left[r(z)\right]^2}
-&= -\frac{D_{AB}}{RT}\int_{p_{A1}}^{p_{A2}}
-\frac{dp_A}{1-p_A/p_T}
-\end{align}
-```
-
-_Can you solve for $N_{A1}$_?
-
-# Examples for Pseudo Steady State (P.S.S)
-
-## Example 1: Diffusion Through Stagnant B with Changing Path Length
-
-_Adapted from Geankoplis 6.2-3_
-
-Water vapor diffuses through a stagnant gas in a narrow vertical tube, dry air is constantly blown at the top of tube.  
-At time $t$, the liquid level is a distance $z$ from the tube top (i.e., the diffusion path length is $z$).  
-As diffusion proceeds, the liquid level drops slowly, so $z$ increases with time. The liquid has density $\rho_A$, and molecular weight $M_A$
-
-1) Derive an expression for the time $t_F$ required for the level to drop such that the diffusion path length changes from $z=z_0$ at $t=0$ to $z=z_F$ at $t=t_F$.
-
-
-
-## Example 1: solutions
-
-:::{.callout-tip}
-1. Use pseudo steady-state assumption
-2. $N_A$ change over time!
+- Change of local $c_A$ over time
+- Need flux equation solution first
+- Can be used for S.S ($\frac{\partial c_A}{\partial t} = 0$) and U.S.S.
 :::
 
-Answer
-$$
-t_F = \frac{\rho_A (z_F^2 - z_0^2) RT p_{Bm}}{2 D_{AB} M_A p_{T}} \frac{1}{(p_{A1} - p_{A2})}
-$$
-
-## Example 2: Determine $D_{AB}$ Through Evaporation
-
-_Adapted from Griskey 10-2_
-
-Sample setup as example 4, a vertical tube of diameter $D=0.01128$ m
-contains a liquid volatile species $A$ (chloropicrin, $CCl_3NO_2$)
-evaporating into stagnant air ($B$) at 1 atm. The gas-phase
-diffusion of $A$ occurs through the air column above the liquid
-surface.
-
-At $t=0$, the distance from the tube top to the liquid surface is $z_0 = 0.0388$ m, after $t=1$ day, the distance is $z_1 = 0.0412$ m.
-
-- Vapor pressure at the interface: $p_{A1} = 3178.3$ Pa
-- Liquid density: $\rho_A = 1650$ kg/m$^3$
-- Molecular weight: $M_A = 164.39$ kg/kmol
-
-1) Use your expression from example 4, determine the binary diffusivity $D_{AB}$ of $A$ in air.
-
-## Example 2: solutions
-
-:::{.callout-tip}
-Pseudo steady state solution and assuming $N_A=\text{const}$ solution differ very little. Why?
 :::
 
-Answer:
+## Mass Balance: Extension to 3D
 
-1. Pseudo-steady state: $D_{AB} = 8.56\times{}10^{-6}\ \text{m}^2/\text{s}$
-1. $N_A$ constant: $D_{AB} = 8.75\times{}10^{-6}\ \text{m}^2/\text{s}$ ($+2.2\%$ error)
+![Illustration of divergence](./public/divergence-operator.png){width="75%" .center}
 
-## Example 3: P.S.S For Diffusion Through Sphere
-
-_Adapted from Geankoplis Ex 6.2-4_
-
-A sphere of naphthalene having a radius of 2.0 mm is suspended in a large volume of still air at 318 K and
-$1.01325 \times{}10^5$ Pa (1 atm). The surface temperature of the naphthalene can be assumed to be at 318 K and
-its vapor pressure at 318 K is 0.555 mm Hg. The $D_AB$ of naphthalene in air at 318 K is $6.92\times{}10^{−6}\ \text{m}^2/\text{s}$.
-
-1. Calculate the rate of evaporation of naphthalene from the surface.
-2. Write the expression for the time $t_F$ to evaporate a sphere from radius $r_0$ to $r_F$. The solid density for naphthalene is $\rho$ and molecular weight is $M_A$.
-3. What is the $t_F$ value when the sphere is completely evaporated?
+```{=tex}
+\begin{align}
+\frac{\partial c_A}{\partial t}
+&= r_A
+- \frac{\partial N_{Ax}}{\partial x}
+- \frac{\partial N_{Ay}}{\partial y}
+- \frac{\partial N_{Az}}{\partial z} \\
+&= r_A - \nabla \cdot \vec{N}_A
+\end{align}
+```
 
 
-## Example 3: solutions
+- $\nabla \cdot$ is the **divergence** operator (not $\Delta$, not gradient!)
+- $\vec{N}_A$ is generally a 3D vector field
 
-:::{.callout-tip}
-Similar setup as example 5. $N_A$ is time-dependent
-:::
+---
 
-Answer:
+## How To Analyze A U.S.S Problem
 
-1) $N_A = 9.68\times{}10^{-8}\ \text{kg mol}/\text{m}^2/\text{s}$
-2) Expression for $t_F{r=r_F}$:
+Unsteady state mass transfer is not intimidating if you follow these steps
+
+1. Draw the scheme
+2. Write down the **mass balance** equation ([In] - [Out] + [Gen] = [Acc])
+3. Identify the [Gen] and [Acc] terms
+4. Choose proper **flux equations** for [In] and [Out] terms
+5. Solving analytically or numerically.
+
+
+---
+
+## Dissecting the General Equation for Mass Balance
+
+```{=tex}
+\begin{align*}
+r_A - \frac{\partial c_A}{\partial t}
+&= \nabla \cdot \left[\vec{J}_{A}^{*} + x_A(\vec{N}_A + \vec{N}_B) \right] \\
+&= \nabla \cdot \left[\vec{J}_{A}^{*} + c_A \vec{v}_m \right] \\
+&= \nabla \cdot \left[ -D_{AB} \nabla c_A + c_A \vec{v}_m \right]
+\end{align*}
+```
+
+- We have fluid velocity $\vec{v}_m$ on the R.H.S
+- $\nabla \cdot$ creates more nonlinear terms
+- Do we know $N_A$ and $N_B$ relation?
+- In general this is hard to solve (coupling fluid with mass transfer)
+- Often interested in several limiting cases
+
+## Special Cases of Unsteady-State Mass Transfer
+
+- Case 1: EMCD for gases at constant $p_T$, $r_A = 0$ (Fick’s second law)
+   - There is **no negative sign** in Fick's second law!
+```{=tex}
+\begin{align}
+\frac{\partial c_A}{\partial t}
+&=
+D_{AB}\nabla^2 c_A
+\end{align}
+```
+
+- Case 2: Constant $D_{AB}$
+```{=tex}
+\begin{align*}
+\frac{\partial c_A}{\partial t}
+&=
+D_{AB}\nabla^2 c_A
+- c_A \nabla \cdot \vec{v}_m
+- \vec{v}_m \cdot \nabla c_A
++ r_A
+\end{align*}
+```
+
+
+- Case 3: Constant $\rho$ and $D_{AB}$ (e.g. imcompressible liquids)
+```{=tex}
+\begin{align}
+\frac{\partial c_A}{\partial t}
+&=
+D_{AB}\nabla^2 c_A
+- \vec{v}_m \cdot \nabla c_A
++ r_A
+\end{align}
+```
+where $\nabla \cdot \vec{v}_m = 0$
+
+## What exactly do we solve?
+
+For U.S.S M.T, we typically need
+
+1. Governing equation (PDE) from any limiting case
+2. Initial conditions $c_A(z, t=0)$
+3. Boundary conditions (B.C.)
+   - Dirichlet B.C. (e.g. $c_A(z=0) = c_0$)
+   - Neumann B.D. (e.g. $N_A(z=0) = N_{A0}$, constant flux)
+4. Solving analytically or numerically
+5. Get $c_A(z, t)$, $x_A(z, t)$, $N_A(x, t)$
+6. Steady-state solutions often means $c_A(z, t\to \infty)$
+
+## Unsteady State Mass Transfer: Calculation Overview
+
+![A "solver engine" for unsteady state mass transfer](./public/uss-engine.png){width="85%"}
+
+## B.C. Case 1. Concentration at surfaces
+
+![Concentration at phase interfaces](./public/bc-conc.svg){width="55%"}
+
+- Interface can be gas|liquid, liquid|solid, gas|solid
+- Often assuming equilibrium
+
 $$
-t_F(r=r_F) = \frac{\rho RT p_{Bm}}{2 M_A D_{AB} p_T} \frac{1}{(p_{A1} - p_{A2})} (r_0^2 - r_F^2)
-$$
-3) Expression for $t_F{r=0}$:
-$$
-t_F(r=0) = \frac{\rho RT p_{Bm} r_0^2}{2 M_A D_{AB} p_T} \frac{1}{(p_{A1} - p_{A2})}
+c_{A}\vert_{\text{surf}} = c_{As}\qquad\text{eq. solubility}
 $$
 
-Compare the solutions with Example 4. We can also measure the
-diffusivity of volatile organic molecules using the sphere evaporation
-methos!
+## B.C. Case 2: Chemical Reactions
+
+![Boundary condition for reaction](./public/bc-reaction.svg){width="55%"}
+
+
+```{=tex}
+\begin{align}
+N_A\big|_{\text{surf}} = \nu_A\, r_A
+\end{align}
+```
+
+- Surface reaction couples mass transfer and kinetics
+- Molar flux at surface determined by reaction rate
+- Generally Neumann boundary
+- $\nu_A$: stoichiometric ratio
+
+## B.C. Case 3: Constant Flux
+
+![Constant flux B.C.](./public/const-flux-bc.svg){width="55%"}
+
+- In many cases the flux $N_{A, \text{surf}}$ or $N_{B, \text{surf}}$ can be constant.
+- E.g. inpenetratable surface to stagnant gas $N_{B, \text{surf}} = 0$
+- **Does not** mean $N_{A}(z)$ or $N_B(z)$ elsewhere is constant!
+
+## U.S.S Example 1: Diffusion Through Stagnant B
+
+We have seen in previous examples how to solve the molar flux of
+liquid evaporating into stagnant air. Let's see the same system but in unsteady state.
+
+**Question**: liquid methanol (A) evaporates inside stagnant air (B)
+inside a vertical tube at constant temperature $T$ and pressure
+$p_T$. At the vent of the system dry air is continuous blown. Plot the
+molar fraction $x_A$ as a function of $z$ and time $t$. Assume the liquid level is $z_0$ away from the vent and does not change during the evaporation process.
+
+## Step 1: Species Mass Balance (Unsteady, 1D)
+
+For a differential slice $A\,dz$, write the mass balance
+
+```{=tex}
+\begin{align}
+\text{[IN]} - \text{[OUT]} &= \text{[ACC]} \\
+A N_A \vert_{z=z} - A N_A \vert_{z=z+\Delta z}
+&= \frac{\partial}{\partial t}\left(A\,dz\,c_A\right) \\
+-\frac{\partial N_A}{\partial z} = \frac{\partial c_A}{\partial t}
+\end{align}
+```
+
+We would have $\frac{\partial c_B}{\partial t} = -\frac{\partial N_B}{\partial z}$
+
+## Step 2: Couple With Flux Equation
+
+This is a diffusion through stagnant B case, we can directly write
+
+```{=tex}
+\begin{align}
+N_A(z, t) = -c_T D_{AB}\frac{\partial x_A(z, t)}{\partial z} + x_A \left[N_A(z, t) + N_B(z, t)\right]
+\end{align}
+```
+
+- Can we use $N_B=0$ in this case?
+- **No**, $N_B$ changes by $z, t$!
+- $N_B=0$ only at $z=0$ (liquid interface)
+- **Do not** write the steady state $N_A$ solution!
+
+## Step 3: Conservation Equations
+
+Generally, we still need to know the relation between $N_A$ and $N_B$
+to solve the mass-balance-flux equations.
+
+The total concentration $c_T=c_A + c_B$ is conserved, therefore we have constrains
+
+```{=tex}
+\begin{align}
+\text{[In]}_{T} - \text{[Out]}_{T} &= 0 \\
+\text{[In]}_A - \text{[Out]}_A &= -\text{[In]}_B + \text{[Out]}_B \\
+\frac{\partial N_A(z, t)}{\partial z} &= -\frac{\partial N_B(z, t)}{\partial z}
+\end{align}
+```
+
+## Step 4: Boundary Conditions
+
+Boundary conditions (Left, Right, any time)
+
+- $x_A(0, t) = x_{A0}$ (equilibrium vapor fraction)
+- $x_A(L, t) = 0$      (dry air)
+- $N_B(0, t) = 0$  (No-flux boundary for B)
+
+The last B.C for $N_B(0, t)$ gives:
+```{=tex}
+\begin{align}
+N_A(0, t) = -\frac{c_T D_{AB}}{1 - x_{A0}}\frac{\partial x_A(0, t)}{\partial z}
+\end{align}
+```
+
+## Step 5: Final solution
+
+- Unsteady state flux equation (stagnant B)
+
+```{=tex}
+\begin{align}
+N_A = -c_T D_{AB} \frac{\partial x_A}{\partial z}
++ x_A \left[ \frac{-c_T D_{AB}}{1 - x_{A0}} \frac{\partial x_{A}}{\partial z}\big\vert_{z=0} \right]
+\end{align}
+```
+
+- Governing equation for diffusion through stagnant B, unsteady state:
+
+```{=tex}
+\begin{align}
+\frac{\partial x_A}{\partial t}
+= c_T D_{AB} \frac{\partial^2 x_A}{\partial z^2}
++ \left[ \frac{-c_T D_{AB}}{1 - x_{A0}} \frac{\partial x_{A}}{\partial z}\big\vert_{z=0} \right] \frac{\partial x_A}{\partial z} 
+\end{align}
+```
+
+- Analytical solution exists, but numerical solution is more convenient
+
+## U.S.S Example 2: Transport Through A Catalyst Wall
+
+**Question**: A gas mixture containing species A flows through a cylindrical conduit of diameter $D$ with a constant mean velocity $v_m$. A porous catalytic wall of thickness $\Delta z$ is located at a fixed axial position inside the conduit. Inside the catalyst region, species A is consumed by a first-order surface reaction:
+$$
+r = k'(c_{A,s} - c_A)
+$$
+
+Assume:
+- one-dimensional transport in the axial ($z$) direction
+- uniform properties in the radial direction
+- constant $T$, $P$, and physical properties
+- no reaction outside the catalyst region
+
+
+
+
+
+
+
 
 ## Summary
 
